Fix spacing bug on Windows

--- a/sass/custom/_navigation.scss
+++ b/sass/custom/_navigation.scss
@@ -32,6 +32,8 @@ body > nav {
         hsl(209.01, 86.94%, 52.04%) 0px 0px 9px,
         hsl(209.01, 86.94%, 52.04%) 0px 0px 11px,
         hsl(0, 0%, 0%) 0 0 2px;
+        width: 20px;
+        display: inline-block;
       &.icon-home, &.icon-book-alt, &.icon-user {
         padding-right: 5px;
       }
